--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,9 @@
  */
 
 :root {
-  --bs-body-bg: var(--bs-blue-100);
+  --bs-body-bg: var(--bs-grey-100);
+}
+
+.element {
+  background-color: blue;
 }
