--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,6 @@
   --bs-body-bg: var(--bs-grey-100);
 }
 
-.element {
-  background-color: blue;
+.container {
+  background-color: rgba(11, 164, 161, 0.236);
 }
