--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,18 @@
   --bs-body-bg: var(--bs-grey-100);
 }
 body{
-  background-color: #d2c1f0;
+  background-color: #d6caea;
 }
 
 p {
   color: black;
 }
 
-p{
-  color: black
+p {
+  color: black;
 }
+
+p {
+  color: black;
+}
+
