Messing with color

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@
   --bs-body-bg: var(--bs-grey-100);
 }
 body{
-  background-color: #d6caea;
+  background-color: #0d030f;
 }
 
 p {
-  color: black;
+  color: #e6d6e0;
 }
 
 body {
