--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 }
 body{
   background-color: #0d030f;
-  text-align: center;
 }
 
 p {
@@ -15,6 +14,10 @@ p {
 }
 h{
   color: #e6d6e0;
+}
+
+.card-title{
+  color:#e6d6e0
 }
 
 
