--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,6 @@ body {
   text-align: center;
 }
 
-h{
-  color:#e6d6e0
-}
 
 body{
   background-color: #0d030f;
@@ -25,6 +22,10 @@ p {
 
 .card-title{
   color:#e6d6e0
+}
+
+h{
+  color: #e6d6e0;
 }
 
 
